tests/baselines/reference/modifiersInObjectLiterals.errors.txt
tests/cases/compiler/modifiersInObjectLiterals.ts(2,2): error TS1184: Modifiers cannot appear here.
tests/cases/compiler/modifiersInObjectLiterals.ts(3,2): error TS1184: Modifiers cannot appear here.
tests/cases/compiler/modifiersInObjectLiterals.ts(4,2): error TS1184: Modifiers cannot appear here.
tests/cases/compiler/modifiersInObjectLiterals.ts(5,2): error TS1184: Modifiers cannot appear here.


==== tests/cases/compiler/modifiersInObjectLiterals.ts (4 errors) ====
    let data = {
    	public foo: 'hey',
    	~~~~~~
!!! error TS1184: Modifiers cannot appear here.
    	private bar: 'nay',
    	~~~~~~~
!!! error TS1184: Modifiers cannot appear here.
    	protected baz: 'oh my',
    	~~~~~~~~~
!!! error TS1184: Modifiers cannot appear here.
    	abstract noWay: 'yes'	
    	~~~~~~~~
!!! error TS1184: Modifiers cannot appear here.
    };
    
    data.foo + data.bar + data.baz + data.noWay
    